fix: Disable text overflow in the resource assignment
Fixes #1102 by setting the maximum width of the model window.

--- a/rodan-client/code/styles/default.css
+++ b/rodan-client/code/styles/default.css
@@ -946,6 +946,7 @@ div#main_workflowbuilder
     background-color: white;
     backdrop-filter: blur(20px);
     min-width: 500px;
+    max-width: 100%;
     /* min-height: 300px; */
 }
 .modal-header {
